# algorist

./: .gitignore  Cargo.toml  README.md  TODO.md
crates/template/: Cargo.toml  rustfmt.toml
crates/template/src/io/: mod.rs
src/: README.md  lib.rs  main.rs
src/algorist/: README.md  mod.rs
src/algorist/collections/: arr_2d.rs  mod.rs
src/algorist/ext/iter/: chunks.rs  fold_while.rs  window.rs
src/algorist/ext/slice/: count.rs  sum.rs
src/algorist/ext/tuple/: transform.rs
src/algorist/ext/vec/: mod.rs  reversed.rs  rotated.rs  sorted.rs
src/algorist/io/: mod.rs
src/algorist/math/: gcd.rs  log.rs  mod.rs  modulo.rs  primes.rs  root.rs
src/algorist/misc/: cards.rs
src/algorist/tpl/: lib.rs
src/cmd/: add_problem.rs  bundle.rs  bundle_problem.rs  create_contest.rs  mod.rs  new_contest.rs
src/collections/: arr_2d.rs  mod.rs
src/ext/: mod.rs
src/ext/iter/: README.md  chunks.rs  fold_while.rs  mod.rs  window.rs
src/ext/slice/: count.rs
src/ext/tuple/: transform.rs
src/ext/vec/: reversed.rs  rotated.rs  sorted.rs
src/io/: mod.rs
src/math/: gcd.rs  log.rs  mod.rs  modulo.rs  primes.rs  root.rs
src/misc/: cards.rs  mod.rs
tpl/: Cargo.toml.tpl  README.md  lib.rs  problem.rs
