[package]
name = "algorist"
version = "0.9.0"
edition = "2024"
license = "MIT"
authors = ["Victor Farazdagi <farazdagi@gmail.com>"]
description = "Algorithms and data structures for competitive programming"
homepage = "https://github.com/farazdagi/algorist"
repository = "https://github.com/farazdagi/algorist"
documentation = "https://docs.rs/algorist"
readme = "README.md"
keywords = ["algorithms", "data-structures", "codeforces"]
categories = ["algorithms", "data-structures"]

[dependencies]
